@@ -13,6 +13,7 @@ import org.springframework.stereotype.Component;
 import javax.annotation.Resource;
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * 自定义权限验证接口扩展 
@@ -44,7 +45,7 @@ public class StpInterfaceImpl implements StpInterface {
     @Override
     public List<String> getRoleList(Object loginId, String loginType) {
         List<UserRole> userRoles = userRoleMapper.selectList(new LambdaQueryWrapper<UserRole>().eq(UserRole::getUid, loginId));
-        return userRoles.stream().map(UserRole::getRoleId).toList();
+        return userRoles.stream().map(UserRole::getRoleId).collect(Collectors.toList());
     }
 
 }
