@@ -20,6 +20,7 @@ import org.springframework.transaction.annotation.Transactional;
 
 import javax.annotation.Resource;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class MenuServiceImpl extends ServiceImpl<MenuMapper, Menu> implements IMenuService {
@@ -70,7 +71,7 @@ public class MenuServiceImpl extends ServiceImpl<MenuMapper, Menu> implements IM
             MenuView view = new MenuView();
             BeanCopierUtil.copy(it, view);
             return view;
-        }).toList();
+        }).collect(Collectors.toList());
     }
 
     @Override
@@ -78,6 +79,6 @@ public class MenuServiceImpl extends ServiceImpl<MenuMapper, Menu> implements IM
         User loginUser = RequestUtils.getLoginUser();
         List<String> menuIdList = getBaseMapper().selectUserRoleMenuList(loginUser.getId());
         List<Menu> menuList = getBaseMapper().selectBatchIds(menuIdList);
-        return menuList.stream().map(Menu::toView).toList();
+        return menuList.stream().map(Menu::toView).collect(Collectors.toList());
     }
 }
